--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+ <link rel="stylesheet" href="style.css">
 <div class="gogemini">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="style.css">
@@ -46,3 +47,4 @@
       <a href="https://www.caratips.biz.id/">Caratips AI</a> uses the Gemini API, it may sometimes display inaccurate information, including about people, so please check the feedback.
     </p>
   </div>
+  <script src="script.js"></script>
